[metadata]
name = gilt-python
summary = gilt - A GIT layering tool.
description-file = README.rst
author = John Dewey
author-email = jodewey@cisco.com
home-page = https://github.com/metacloud/gilt
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Systems Administration
    Topic :: Utilities

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    gilt = gilt.shell:main

[files]
packages =
    gilt

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
