[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = python-gilt
summary = gilt - A GIT layering tool.
description-file = README.rst
author = John Dewey
author-email = john@dewey.ws
home-page = https://github.com/retr0h/gilt
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    click
    colorama
    fasteners
    PyYAML
    sh

[options.extras_require]
# These are required during test:
test =
    black==19.10b0
    flake8
    hacking
    pep517
    pytest
    pytest-cov
    pytest-helpers-namespace
    pytest-mock
    twine

[options.entry_points]
console_scripts =
    gilt = gilt.shell:main

[options.packages.find]
where = .

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
